[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "kingkybel-pyfundamentals"

[project]
name = "kingkybel-pyfundamentals"
version = "0.2.0"
description = "A collection of fundamental Python utilities for common tasks"
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    {name = "Dieter J Kybelksties", email = "github@kybelksties.com"}
]
keywords = ["python", "utilities", "fundamentals", "enums", "string-manipulation", "threading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/kingkybel/PyFundamentals"

[tool.setuptools]
packages = ["fundamentals"]
zip-safe = false

[tool.setuptools.package-data]
fundamentals = ["*.py"]
